--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -29,45 +29,54 @@
 
     
     <main>
-        <div id="main_bebidas_verde" class="imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop verde.jpg" alt="">
+        <div  class=" colorFondoNaranja imgContainer">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
+        </div>
+        <div class="tituloPag colorFondoVerde">    
             <h1 class="colorCrema tamGrande">BEBIDAS</h1>
         </div>
-        <section class="boxMaster">
-            <div class="boxEsclavo">
+
+        <section class="bebidas__BoxMaster">
+            <div class="bebidas__BoxEsclavo">
                 <img class="imgBebida" src="../img/limo.jpg" alt="">
                 <h2>Jugos y Licuados</h2>
-                <ul>
-                    <li>Exprimido de Naranja</li>
-                    <li>Limonada</li>
-                    <li>Kale Manzana Naranja</li>
-                    <li>Mango Banana Naranaja</li>
-                    <li>Frutilla</li>
-                </ul>
+                <div >
+                    <ul>
+                        <li>Exprimido de Naranja</li>
+                        <li>Limonada</li>
+                        <li>Kale Manzana Naranja</li>
+                        <li>Mango Banana Naranaja</li>
+                        <li>Frutilla</li>
+                    </ul>
+                </div>
             </div>   
-            <div class="boxEsclavo">      
+            <div class="bebidas__BoxEsclavo">      
                 <img class="imgBebida" src="../img/Cerveza.jpg" alt="">
                 <h2>Bebidas</h2>
-                <ul>
-                    <li>Agua Mineral</li>
-                    <li>Agua Saborizada</li>
-                    <li>Gaseosa</li>
-                    <li>Cerveza Heineken 330cc</li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>Agua Mineral</li>
+                        <li>Agua Saborizada</li>
+                        <li>Gaseosa</li>
+                        <li>Cerveza Heineken 330cc</li>
+                    </ul>
+                </div>
             </div>  
-            <div class="boxEsclavo">          
+            <div class="bebidas__BoxEsclavo">          
                 <img class="imgBebida" src="../img/cafe2.jpg" alt="">
                 <h2>Cafés</h2>
-                <ul>
-                    <li>Espresso</li>
-                    <li>Macchiato</li>
-                    <li>Espresso Doble</li>
-                    <li>Americano</li>
-                    <li>Latte</li>
-                    <li>Capuccino</li>
-                    <li>Lagrima</li>
-                    <li>*Consulta por los saborizados*</li>
-                </ul>
+                <div>
+                    <ul >
+                        <li>Espresso</li>
+                        <li>Macchiato</li>
+                        <li>Espresso Doble</li>
+                        <li>Americano</li>
+                        <li>Latte</li>
+                        <li>Capuccino</li>
+                        <li>Lagrima</li>
+                        <li>Consulta por los saborizados</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>  
