--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -28,13 +28,15 @@
     </header>
         
     <main>
-        <div id="main_promo_verde" class="imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop verde.jpg" alt="">
-            <h1 class="colorCrema tamGrande">CLUB KOP</h1>
+        <div  class=" colorFondoNaranja imgContainer">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
         </div>
-        <div class="boxMaster" id="main_clubkop_ben">
-            <h1 class="colorCrema tamGrande">BENEFICIOS CLUB KOP </h1>
-            <ul>
+        <div class="tituloPag colorFondoVerde">    
+            <h1 class="colorCrema tamGrande">BENEFICIOS CLUB KOP</h1>
+        </div>
+
+        <div>
+            <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo">
                         <img class="imgRecomDia" src="../img/limo.jpg" alt="">
