--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -28,31 +28,57 @@
     </header>
         
     <main>
-        <div id="main_dulces_verde" class="imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop verde.jpg" alt="">
+        <div  class=" colorFondoNaranja imgContainer">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
+        </div>
+        <div class="tituloPag colorFondoVerde">    
             <h1 class="colorCrema tamGrande">DULCES</h1>
         </div>
+
         <section class="boxMaster">
-            <ul>
+            <ul class="main__flexCardEsclavoDul">
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgDulces" src="../img/dulces.jpg" alt="">
-                        <h3>Roll de Canela</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, nostrum.</p>
+                    <div class="dulces__boxEsclavo">
+                        <div>
+                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                        </div>
+                        <div class="dulces__ParraFlex">
+                            <h3>Key Lime</h3>
+                            <p>Base de galleta desmenuzada, un relleno suave y cítrico hecho con jugo de lima, y una capa de crema batida.</p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgDulces" src="../img/dulces.jpg" alt="">
-                        <h3>Croissant con dulce de leche</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, facilis.</p>
+                    <div class="dulces__boxEsclavo">
+                        <div>
+                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                        </div>
+                        <div class="dulces__ParraFlex">
+                            <h3>Cheesecake Frutos Rojos</h3>
+                            <p>Base de galleta crujiente, una capa de queso crema suave y sedosa,y frutos rojos, como fresas, frambuesas y moras  .</p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgDulces" src="../img/dulces.jpg" alt="">
-                        <h3>Key Lime</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, facilis.</p>
+                    <div class="dulces__boxEsclavo">
+                        <div>
+                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                        </div>
+                        <div class="dulces__ParraFlex">
+                            <h3>Alfajores</h3>
+                            <p>Puedes elegir entre: Dulce de leche, Pistachos o Maicena.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dulces__boxEsclavo">
+                        <div>
+                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                        </div>
+                        <div class="dulces__ParraFlex">
+                            <h3>Torta Rogel</h3>
+                            <p>Capas finas y crujientes de masa de hojaldre intercaladas con dulce de leche, y cubierta con merengue.</p>
+                        </div>
                     </div>
                 </li>
             </ul>
