--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -28,31 +28,68 @@
     </header>
 
     <main>
-        <div id="main_salados_verde" class="imgContainer">
-            <img class="tamImgAuto" src="../img/kop/kop verde.jpg" alt="">
+        <div  class=" colorFondoNaranja imgContainer">
+            <img class="tamImgAuto" src="../img/kop/kop naranja letras.jpg" alt="">
+        </div>
+        <div class="tituloPag colorFondoVerde">    
             <h1 class="colorCrema tamGrande">SALADOS</h1>
         </div>
+
         <section class="boxMaster">
-            <ul>
+            <ul class="main__flexCardEsclavoSal">
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgSalado" src="../img/salado.jpg" alt="">
-                        <h3>Tostado Jamon & Queso</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, nostrum.</p>
+                    <div class="salados__boxEsclavo">
+                        <div>
+                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                        </div>
+                        <div class="salados__ParraFlex">
+                            <h3>Sandwich Veggie</h3>
+                            <p>Pan shoku, espinaca, queso brie, zapallo asado y alioli.</p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgSalado"  src="../img/salado.jpg" alt="">
-                        <h3>Fosforito Tomates Secos & Brie</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, facilis.</p>
+                    <div class="salados__boxEsclavo">
+                        <div>
+                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                        </div>
+                        <div class="salados__ParraFlex">
+                            <h3>Tostado Italiano</h3>
+                            <p>Pan brioche, tomates secos, rucula, aceitunas negras, mix de quesos.</p>
+                        </div>
                     </div>
                 </li>
                 <li>
-                    <div class="boxEsclavo">
-                        <img class="imgSalado"  src="../img/salado.jpg" alt="">
-                        <h3>Sandwich KOP</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, facilis.</p>
+                    <div class="salados__boxEsclavo">
+                        <div>
+                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                        </div>
+                        <div class="salados__ParraFlex">
+                            <h3>Media Luna J&Q</h3>
+                            <p>Media Luna rellena de Jamon ahumado y laminas de queso fundido.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="salados__boxEsclavo">
+                        <div>
+                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                        </div>
+                        <div class="salados__ParraFlex">
+                            <h3>Trisqueta de Palta</h3>
+                            <p>Pan de masa madre, palta, hummus clasico, tomates confitados y aceite de oliva con especias.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="salados__boxEsclavo">
+                        <div>
+                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                        </div>
+                        <div class="salados__ParraFlex">
+                            <h3>Fosforito KOP</h3>
+                            <p>Masa de hojaldre, pastron, queso brie, pepinitos encurtidos.</p>
+                        </div>
                     </div>
                 </li>
             </ul>
