--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -83,9 +83,9 @@
                 <h2>Bebidas</h2>
                 <div>
                     <ul>
-                        <li>Agua Mineral</li>
-                        <li>Agua Saborizada</li>
-                        <li>Gaseosa</li>
+                        <li>Agua Mineral (con o sin gas)</li>
+                        <li>Agua Saborizadas</li>
+                        <li>Gaseosas</li>
                         <li>Cerveza Heineken 330cc</li>
                     </ul>
                 </div>
@@ -103,6 +103,21 @@
                         <li>Capuccino</li>
                         <li>Lagrima</li>
                         <li>Consulta por los saborizados</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bebidas__BoxEsclavo">          
+                <img class="imgBebida" src="../img/cafe2.jpg" alt="">
+                <h2>Cocteleria</h2>
+                <div>
+                    <ul >
+                        <li>Aperol</li>
+                        <li>Cynar</li>
+                        <li>Gin Tonic</li>
+                        <li>Vermouth</li>
+                        <li>Negroni</li>
+                        <li>Caipiroska</li>
+                        <li>Caipirinha</li>
                     </ul>
                 </div>
             </div>
