--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -22,7 +22,7 @@
             </div>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"></a>
+                    <!-- <a class="navbar-brand" href="#"></a> -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -30,10 +30,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link header_Txt_Color" href="../index.html">Inicio</a>
                             <a class="nav-link" href="./bebidas.html">Bebidas</a>
                             <a class="nav-link" href="./salados.html">Salados</a>
-                            <a class="nav-link active" aria-current="page" href="./dulces.html">Dulces</a>
+                            <a class="nav-link active header_Txt_Color" aria-current="page" href="./dulces.html">Dulces</a>
                             <a class="nav-link" href="./clubkop.html">Club KOP</a>
                         </div>
                     </div>
@@ -64,11 +64,14 @@
         </div>
 
         <section class="boxMaster">
+            <div>
+                <h2 class="SD_Subtitulo">La pastelería dulce es un verdadero paraíso para los amantes de los postres. Cada creación está cuidadosamente elaborada con ingredientes de alta calidad y amor por la repostería, asegurando que cada bocado sea una experiencia dulce y memorable. Ven y descubre el encanto de nuestra pastelería dulce, que hace que cada visita a nuestra cafetería sea aún más especial.</h2>
+            </div>
             <ul class="main__flexCardEsclavoDul">
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces" src="../img/dulces.jpg" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Key Lime</h3>
@@ -79,10 +82,10 @@
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces" src="../img/dulces.jpg" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
-                            <h3>Cheesecake Frutos Rojos</h3>
+                            <h3>Cheesecake</h3>
                             <p>Base de galleta crujiente, una capa de queso crema suave y sedosa,y frutos rojos, como fresas, frambuesas y moras  .</p>
                         </div>
                     </div>
