--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/kop/kop_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>KOP</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <title>KOP</title>
 </head>
 <body>
     <header>
@@ -61,8 +62,10 @@
         <div class="tituloPag colorFondoVerde">    
             <h1 class="colorCrema tamGrande">SALADOS</h1>
         </div>
-
         <section class="boxMaster">
+            <div>
+                <h2 class="SD_Subtitulo"> La pastelería salada es una deliciosa opción para aquellos que buscan un sabor único y reconfortante. Cada bocado es una combinación perfecta de sabores, texturas y aromas que te transportarán a un mundo de satisfacción salada. Ven y disfruta de nuestra pastelería salada que hará que tus papilas gustativas se deleiten en cada visita.</h2>
+            </div>
             <ul class="main__flexCardEsclavoSal">
                 <li>
                     <div class="salados__boxEsclavo">
