--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -65,16 +65,19 @@
         </div>
 
         <section class="bebidas__BoxMaster">
+            <div>
+                <h2 class="SD_Subtitulo">La variedad de bebidas es una verdadera celebración para tus sentidos. Desde los ricos y aromáticos cafés espresso y cappuccinos, perfectos para despertar tus mañanas, hasta nuestros refrescantes batidos de frutas y cócteles de café helado que te acompañarán en los días soleados. Nuestra coctelería presenta creaciones originales y clásicos reinventados, ideales para disfrutar en cualquier ocasión. Cada bebida se elabora con esmero y pasión, garantizando que cada sorbo sea una experiencia inolvidable.</h2>
+            </div>
             <div class="bebidas__BoxEsclavo">
                 <img class="imgBebida" src="../img/limo.jpg" alt="">
                 <h2>Jugos y Licuados</h2>
-                <div >
+                <div>
                     <ul>
                         <li>Exprimido de Naranja</li>
                         <li>Limonada</li>
                         <li>Kale Manzana Naranja</li>
-                        <li>Mango Banana Naranaja</li>
-                        <li>Frutilla</li>
+                        <li>Mango Banana Naranja</li>
+                        <li>Pomelada</li>
                     </ul>
                 </div>
             </div>   
@@ -87,6 +90,7 @@
                         <li>Agua Saborizadas</li>
                         <li>Gaseosas</li>
                         <li>Cerveza Heineken 330cc</li>
+                        <li>Cerveza Stella Artois 330cc</li>
                     </ul>
                 </div>
             </div>  
