--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -33,7 +33,7 @@
                             <a class="nav-link header_Txt_Color" href="../index.html">Inicio</a>
                             <a class="nav-link" href="./bebidas.html">Bebidas</a>
                             <a class="nav-link" href="./salados.html">Salados</a>
-                            <a class="nav-link active header_Txt_Color" aria-current="page" href="./dulces.html">Dulces</a>
+                            <a class="nav-link active" aria-current="page" href="./dulces.html">Dulces</a>
                             <a class="nav-link" href="./clubkop.html">Club KOP</a>
                         </div>
                     </div>
