--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         <div class="footer__conRrss">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="link"><img src="./img/face.jpg" alt=""></a></li>
-                    <li><a href="link"><img src="./img/wsp.jpg" alt=""></a></li>
-                    <li><a href="link"><img src="./img/insta.jpg" alt=""></a></li>
+                    <li><a href="link"><img src="./img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="link"><img src="./img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="link"><img src="./img/icons8-instagram.svg" alt=""></a></li>
                 </ul>
             </div>
             <div class="colorCafe footer__contacto">
@@ -166,10 +166,10 @@
                         <h3>Contáctenos:</h3>
                     </li>
                     <li>
-                        <p>Celular: +54 9 115555555</p>
+                        <p class="footer__p">Celular: +54 9 115555555</p>
                     </li>
                     <li>
-                        <p>Direccion: La Pampa 3048, CABA.</p>
+                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
                     </li>
                 </ul>
             </div>
@@ -187,7 +187,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
