--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -102,30 +102,43 @@
         </section>    
     </main>  
         
-    <footer>
-        <div>
-            <ul>
-                <li><a href="link"><img src="../img/face.jpg" alt=""></a></li>
-                <li><a href="link"><img src="../img/wsp.jpg" alt=""></a></li>
-                <li><a href="link"><img src="../img/insta.jpg" alt=""></a></li>
-            </ul>
+    <footer  class="footer__master colorFondoCrema">
+        <div class="footer__conRrss">
+            <div class="footer__stylerrss">
+                <ul class="footer__flexImg">
+                    <li><a href="link"><img src="../img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="link"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="link"><img src="../img/icons8-instagram.svg" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="footer__contacto">
+                <ul >
+                    <li>
+                        <h3>Contáctenos:</h3>
+                    </li>
+                    <li>
+                        <p class="footer__p">Celular: +54 9 115555555</p>
+                    </li>
+                    <li>
+                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="colorCafe">
-            <ul>
-                <li>
-                    <p>Celular: +54 9 115555555</p>
-                </li>
-                <li>
-                    <p>Direccion: Lorem ipsum dolor sit amet.</p>
-                </li>
-            </ul>
+        <div>
+            <img class="footer__logo" src="../img/kop/kop logo crema.jpg"
+                alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
         </div>
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>    
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
+                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
