--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
             </div>
             <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
+                <div class="container-fluid header__padNone">
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -41,19 +41,6 @@
                 </div>
             </nav>
         </div>
-        <!-- <div class="header__menuNav">
-            <div>
-                <img class="header__logo" src="./img/kop/kop logo crema.jpg" alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
-            </div>
-            <nav>
-                <ul class="header__menuLink">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./paginas/bebidas.html">Bebidas</a></li>    
-                    <li><a href="./paginas/salados.html">Salados</a></li>
-                    <li><a href="./paginas/dulces.html">Dulces</a></li>
-                    <li><a href="./paginas/clubkop.html">Club KOP</a></li>
-            </nav>
-        </div> -->
     </header>
 
 
@@ -69,7 +56,7 @@
             <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="./img/limo.jpg" alt="">
+                        <img class="imgRecomDia" src="./img/cafe1.jpg" alt="">
                         <h2>Limonada Casera</h2>
                         <p>Disfruta de nuestra limonada casera, preparada con jugo fresco de limones recién exprimidos y
                             un toque de dulzura perfectamente equilibrado.</p>
@@ -77,7 +64,7 @@
                 </li>
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="./img/cafe2.jpg" alt="">
+                        <img class="imgRecomDia" src="./img/cafe1.jpg" alt="">
                         <h2>Café Capuccino</h2>
                         <p>Deléitate con nuestra exquisita creación. Una mezcla perfecta de café espresso suave y espuma
                             de leche cremosa, coronado con un toque de cacao en polvo. </p>
@@ -120,19 +107,20 @@
             </ul>
         </div>
 
-        <section class="tamClubVerde">
-            <div>
+        <section class="tamClubVerde clubkop__flex">
+            <div  class="clubkop__formCenter">
                 <h2 class="colorCrema tamGrande">CLUB KOP</h2>
                 <h2 class="colorCafe posH2">UNITE A NOSOTROS</h2>
+                <ul class="clubkop__padNone">
+                    <li>
+                        <div class="boton txtBoton">
+                            <a class="colorCafe" href="./paginas/clubkop.html">UNIRME A CLUB KOP</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <ul>
-                <li>
-                    <div class="boton txtBoton">
-                        <a class="colorCafe" href="./paginas/clubkop.html">UNIRME A CLUB KOP</a>
-                    </div>
-                </li>
-            </ul>
-            <ul>
+            
+            <ul class="clubkop__listCenter">
                 <li>
                     <div>
                         <p>Usuario</p>
@@ -155,9 +143,9 @@
         <div class="footer__conRrss">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="link"><img src="./img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="link"><img src="./img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="link"><img src="./img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="./img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="./img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="./img/icons8-instagram.svg" alt=""></a></li>
                 </ul>
             </div>
             <div class="colorCafe footer__contacto">
