--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/kop/kop_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css">
     <title>KOP</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                     alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
             </div>
             <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
+                <div class="container-fluid header__padNone">
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -39,20 +39,6 @@
                 </div>
             </nav>
         </div>
-        
-        <!-- <div class="header__menuNav">
-            <div>
-                <img class="header__logo" src="../img/kop/kop logo crema.jpg" alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
-            </div>
-            <nav>
-                <ul class="header__menuLink">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./bebidas.html">Bebidas</a></li>    
-                    <li><a href="./salados.html">Salados</a></li>
-                    <li><a href="./dulces.html">Dulces</a></li>
-                    <li><a href="./clubkop.html">Club KOP</a></li>
-            </nav>
-        </div> -->
     </header>
 
     
@@ -132,9 +118,9 @@
         <div class="footer__conRrss">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="link"><img src="../img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="link"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="link"><img src="../img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg" alt=""></a></li>
                 </ul>
             </div>
             <div class="footer__contacto">
