--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -21,7 +21,7 @@
                     alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
             </div>
             <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
+                <div class="container-fluid header__padNone">
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -40,19 +40,6 @@
                 </div>
             </nav>
         </div>
-        <!-- <div class="header__menuNav">
-            <div>
-                <img class="header__logo" src="../img/kop/kop logo crema.jpg" alt="logo de la cafeteria, ilustracion de una taza de cafe y en la parte inferior letras del nombre de la cafeteria KOP">
-            </div>
-            <nav>
-                <ul class="header__menuLink">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./bebidas.html">Bebidas</a></li>    
-                    <li><a href="./salados.html">Salados</a></li>
-                    <li><a href="./dulces.html">Dulces</a></li>
-                    <li><a href="./clubkop.html">Club KOP</a></li>
-            </nav>
-        </div> -->
     </header>
         
     <main>
@@ -81,13 +68,13 @@
                 </li>
             </ul>
         </div>
-        <section class="tamClubVerde">
+        <section class="tamClubVerde clubkop__flex">
             <div >
-                <h2 class="colorCrema tamGrande">INSCRIBETE YA!</h2>
+                <h2 class="colorCrema tamGrande clubkop__txtCenter">INSCRIBETE YA!</h2>
             </div>
-            <ul>
+            <ul class="clubkop__listCenter">
                 <li>
-                    <div>   
+                    <div class="clubkop__formCenter">   
                         <p class="intxt">Nombre</p>
                         <p class="intxt">Fecha de Nacimiento</p>
                         <p class="intxt">Correo Electrónico</p>
@@ -95,7 +82,7 @@
                 </li>
                 <li>
                     <div class="boton txtBoton">
-                        <a class="colorCafe" href="./clubkop.html">INSCRIBIRME</a>
+                        <a class="colorCafe txtBotonDeco" href="./clubkop.html">INSCRIBIRME</a>
                     </div>    
                 </li>
             </ul>
@@ -106,9 +93,9 @@
         <div class="footer__conRrss">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="link"><img src="../img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="link"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="link"><img src="../img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="../index.html"><img src="../img/icons8-instagram.svg" alt=""></a></li>
                 </ul>
             </div>
             <div class="footer__contacto">
