--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -58,7 +58,7 @@
                 <img class="imgBebida" src="../img/limo.jpg" alt="">
                 <h2>Jugos y Licuados</h2>
                 <div>
-                    <ul>
+                    <ul class="bebidas__padNone">
                         <li>Exprimido de Naranja</li>
                         <li>Limonada</li>
                         <li>Kale Manzana Naranja</li>
@@ -71,7 +71,7 @@
                 <img class="imgBebida" src="../img/Cerveza.jpg" alt="">
                 <h2>Bebidas</h2>
                 <div>
-                    <ul>
+                    <ul class="bebidas__padNone">
                         <li>Agua Mineral (con o sin gas)</li>
                         <li>Agua Saborizadas</li>
                         <li>Gaseosas</li>
@@ -84,7 +84,7 @@
                 <img class="imgBebida" src="../img/cafe2.jpg" alt="">
                 <h2>Cafés</h2>
                 <div>
-                    <ul >
+                    <ul class="bebidas__padNone">
                         <li>Espresso</li>
                         <li>Macchiato</li>
                         <li>Espresso Doble</li>
@@ -92,19 +92,18 @@
                         <li>Latte</li>
                         <li>Capuccino</li>
                         <li>Lagrima</li>
-                        <li>Consulta por los saborizados</li>
                     </ul>
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo">          
                 <img class="imgBebida" src="../img/cafe2.jpg" alt="">
-                <h2>Cocteleria</h2>
+                <h2>Coctelería</h2>
                 <div>
-                    <ul >
+                    <ul class="bebidas__padNone">
                         <li>Aperol</li>
                         <li>Cynar</li>
                         <li>Gin Tonic</li>
-                        <li>Vermouth</li>
+                        <li>Vermú</li>
                         <li>Negroni</li>
                         <li>Caipiroska</li>
                         <li>Caipirinha</li>
@@ -124,7 +123,7 @@
                 </ul>
             </div>
             <div class="footer__contacto">
-                <ul >
+                <ul class="footer__padNone"> 
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -132,7 +131,7 @@
                         <p class="footer__p">Celular: +54 9 115555555</p>
                     </li>
                     <li>
-                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
+                        <p class="footer__p">Dirección: La Pampa 3048, CABA.</p>
                     </li>
                 </ul>
             </div>
@@ -144,7 +143,7 @@
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
-                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
