--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -71,10 +71,12 @@
         <section class="tamClubVerde clubkop__flex">
             <div >
                 <h2 class="colorCrema tamGrande clubkop__txtCenter">INSCRIBETE YA!</h2>
+                <h2 class="clubkop_Subtitulo">Unirse a nuestro Club de Socios es sencillo y gratuito. Simplemente completa el formulario de inscripción en nuestra página web y comienza a disfrutar de los beneficios exclusivos que ofrecemos a nuestros socios.</h2>
             </div>
             <ul class="clubkop__listCenter">
                 <li>
                     <div class="clubkop__formCenter">   
+                        <h2 class="colorCrema tamMediano clubkop__txtCenter">INGRESA TUS DATOS</h2>
                         <p class="intxt">Nombre</p>
                         <p class="intxt">Fecha de Nacimiento</p>
                         <p class="intxt">Correo Electrónico</p>
@@ -82,7 +84,7 @@
                 </li>
                 <li>
                     <div class="boton txtBoton">
-                        <a class="colorCafe txtBotonDeco" href="./clubkop.html">INSCRIBIRME</a>
+                        <a class="colorCrema txtBotonDeco" href="./clubkop.html">INSCRIBIRME</a>
                     </div>    
                 </li>
             </ul>
@@ -99,7 +101,7 @@
                 </ul>
             </div>
             <div class="footer__contacto">
-                <ul >
+                <ul class="footer__padNone"> 
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -107,7 +109,7 @@
                         <p class="footer__p">Celular: +54 9 115555555</p>
                     </li>
                     <li>
-                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
+                        <p class="footer__p">Dirección: La Pampa 3048, CABA.</p>
                     </li>
                 </ul>
             </div>
@@ -119,7 +121,7 @@
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
-                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
