--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
         <div class="colorFondoNaranja imgContainer">
-            <img src="./img/kop/kop naranja letras.jpg" alt="imagen del logotipo en naranja">
+            <img class="tamImgAuto" src="./img/kop/kop naranja letras.jpg" alt="imagen del logotipo en naranja">
         </div>
         <div class="tituloPag" id="main_index_verde">
             <h1 class="colorCrema tamGrande">RECOMENDADOS DEL DÍA </h1>
@@ -110,17 +110,19 @@
         <section class="tamClubVerde clubkop__flex">
             <div  class="clubkop__formCenter">
                 <h2 class="colorCrema tamGrande">CLUB KOP</h2>
-                <h2 class="colorCafe posH2">UNITE A NOSOTROS</h2>
+                <h2 class="colorCrema posH2">¡UNITE A NOSOTROS!</h2>
+                <h2 class="clubkop_Subtitulo">Entra en el mundo de la pasión por el café y únete a nuestro Club de Socios hoy mismo. ¡Esperamos recibirte en nuestra familia de amantes del café y hacer que cada visita a nuestra cafetería sea aún más especial!".</h2>
                 <ul class="clubkop__padNone">
                     <li>
                         <div class="boton txtBoton">
-                            <a class="colorCafe" href="./paginas/clubkop.html">UNIRME A CLUB KOP</a>
+                            <a class="colorCrema" href="./paginas/clubkop.html">UNIRME A CLUB KOP</a>
                         </div>
                     </li>
                 </ul>
             </div>
             
             <ul class="clubkop__listCenter">
+                <h2 class="colorCrema posH2">INGRESA A CLUB KOP</h2>
                 <li>
                     <div>
                         <p>Usuario</p>
@@ -132,7 +134,7 @@
                 <li>
                     <!-- Boton pensado en el futuro, para ir a promociones exclusivas. Debera consultar usuario y contraseña -->
                     <div class="boton txtBoton">
-                        <a class="colorCafe " href="./paginas/clubkop.html">INGRESAR AL CLUB KOP</a>
+                        <a class="colorCrema " href="./paginas/clubkop.html">INGRESAR</a>
                     </div>
                 </li>
             </ul>
@@ -149,7 +151,7 @@
                 </ul>
             </div>
             <div class="colorCafe footer__contacto">
-                <ul>
+                <ul class="footer__padNone">
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -157,7 +159,7 @@
                         <p class="footer__p">Celular: +54 9 115555555</p>
                     </li>
                     <li>
-                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
+                        <p class="footer__p">Dirección: La Pampa 3048, CABA.</p>
                     </li>
                 </ul>
             </div>
@@ -169,7 +171,7 @@
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
-                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
