--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -123,7 +123,7 @@
                 </ul>
             </div>
             <div class="footer__contacto">
-                <ul >
+                <ul class="footer__padNone"> 
                     <li>
                         <h3>Contáctenos:</h3>
                     </li>
@@ -131,7 +131,7 @@
                         <p class="footer__p">Celular: +54 9 115555555</p>
                     </li>
                     <li>
-                        <p class="footer__p">Direccion: La Pampa 3048, CABA.</p>
+                        <p class="footer__p">Dirección: La Pampa 3048, CABA.</p>
                     </li>
                 </ul>
             </div>
@@ -143,7 +143,7 @@
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
-                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
