mediaq index club kop

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="./paginas/salados.html"><img class="imgMenu" src="./img/salado.jpg" alt=""></a>
                     <h2>Salados</h2>
                     <p>Nuestra pastelería salada es una explosión de sabores y texturas que deleitará tu paladar. Desde
-                        hojaldres rellenos de queso y espinacas hasta croissants salados con jamón y queso, nuestra
+                        los mas ricos sandwich, hasta las clasicas medias lunas con jamón y queso, nuestra
                         selección de pastelería salada ofrece opciones deliciosas para satisfacer tu apetito.</p>
                     <!-- <p>Nuestra pastelería salada es una explosión de sabores y texturas que deleitará tu paladar. Desde hojaldres rellenos de queso y espinacas hasta croissants salados con jamón y queso, nuestra selección de pastelería salada ofrece opciones deliciosas para satisfacer tu apetito. Cada bocado es una experiencia única que combina ingredientes frescos y sabores irresistibles.</p> -->
                 </li>
@@ -145,9 +145,9 @@
         <div class="footer__conRrss">
             <div class="footer__stylerrss">
                 <ul class="footer__flexImg">
-                    <li><a href="../index.html"><img src="./img/icons8-facebook.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="./img/icons8-whatsapp.svg" alt=""></a></li>
-                    <li><a href="../index.html"><img src="./img/icons8-instagram.svg" alt=""></a></li>
+                    <li><a href="./index.html"><img src="./img/icons8-facebook.svg" alt=""></a></li>
+                    <li><a href="./index.html"><img src="./img/icons8-whatsapp.svg" alt=""></a></li>
+                    <li><a href="./index.html"><img src="./img/icons8-instagram.svg" alt=""></a></li>
                 </ul>
             </div>
             <div class="colorCafe footer__contacto">
