--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                             <a class="nav-link" href="./paginas/bebidas.html">Bebidas</a>
                             <a class="nav-link" href="./paginas/salados.html">Salados</a>
                             <a class="nav-link" href="./paginas/dulces.html">Dulces</a>
